apps/vikunja/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-svc
spec:
  selector:
    app: vikunja
  ports:
  - port: 3456
    targetPort: 3456
    name: http
  type: ClusterIP
