apps/vikunja/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ingress
  namespace: vikunja
  annotations:
    tailscale.com/proxy-class: "tailscale-small"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja-svc
                port:
                  number: 3456
  tls:
  - hosts:
    - vikunja
